--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <main class="main">
          <section class="home section" id="home">
-            <img src="assets/img/home-bg.png" alt="image" class="home__bg">
+            <img src="assets/img/home-bg.jpg" alt="image" class="home__bg">
             <div class="home__blur"></div>
 
             <div class="home__container container grid">
